GNOME Bugzilla – Bug 628802
nautilus location bar no longer recognizes ~ as /home/username
Last modified: 2010-12-17 14:40:23 UTC
Entering ~ as $HOME is no longer recognized in 2.31 Steps to reproduce: Go to /bin Enter ~ in address bar Error is "Could not find /~, please check the spelling and try again"
Created attachment 169500 [details] [review] Initial patch
*** Bug 632009 has been marked as a duplicate of this bug. ***
also reported at: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/630512
*** Bug 637401 has been marked as a duplicate of this bug. ***
Thanks for the patch! I pushed a sligthly modified version to master, without the WIN32 checks. The following fix has been pushed: 67d0cba location-entry: don't treat '~' as a relative path
Created attachment 176594 [details] [review] location-entry: don't treat '~' as a relative path Based on a patch by Reed Lipman <rmlipman@gmail.com>