location-entry: don't treat '~' as a relative path

Based on a patch by Reed Lipman <rmlipman@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=628802